5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1637_2447.log
== TEST (2019-04-09 10:46:14) 
-- CODE:
preco = float(input("Qual o preco: "))
pagamento = float(input("Valor pago: "))

if(preco >= pagamento):
	mensagem = "Falta" + (preco - pagamento)
	
else:
	mensagem = "Troco de " + (pagamento - preco)
	
print(round(mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = "Falta" + (preco - pagamento)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:47:49) 
-- CODE:
preco = float(input("Qual o preco: "))
pagamento = float(input("Valor pago: "))

if(preco >= pagamento):
	mensagem = "Falta" + round(preco - pagamento, 2)
	
else:
	mensagem = "Troco de " + round(pagamento - preco, 2)
	
print(round(mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = "Falta" + round(preco - pagamento, 2)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:49:06) 
-- CODE:
preco = float(input("Qual o preco: "))
pagamento = float(input("Valor pago: "))

if(preco >= pagamento):
	mensagem = "Falta" + preco - pagamento
	
else:
	mensagem = "Troco de " + pagamento - preco
	
print(round(mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = "Falta" + preco - pagamento
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:49:34) 
-- CODE:
preco = float(input("Qual o preco: "))
pagamento = float(input("Valor pago: "))

if(preco > pagamento):
	mensagem = "Falta" + (preco - pagamento)
	
else:
	mensagem = "Troco de " + (pagamento - preco)
	
print(round(mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = "Falta" + (preco - pagamento)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:51:15) 
-- CODE:
preco = float(input("Qual o preco: "))
pagamento = float(input("Valor pago: "))

if(preco > pagamento):
	print("Falta", round(preco - pagamento, 2))
	
else:
	print("Troco de ", round(pagamento - preco, 2)
	

-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:51:22) 
-- CODE:
preco = float(input("Qual o preco: "))
pagamento = float(input("Valor pago: "))

if(preco > pagamento):
	print("Falta", round(preco - pagamento, 2))
	
else:
	print("Troco de ", round(pagamento - preco, 2))
	

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:51:33) 
-- CODE:
preco = float(input("Qual o preco: "))
pagamento = float(input("Valor pago: "))

if(preco > pagamento):
	print("Falta", round(preco - pagamento, 2))
	
else:
	print("Troco de ", round(pagamento - preco, 2))
	

-- EXECUTION TIME:
0.169415
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
